adding appid + passport with an example protected route

modifying readme


modifying readme


Modifying the authorization/secuirty for REST API to be configured through the fabric-connections


adding readme changes


post-code review changes


changes to token version in auth helper


updating swagger for auth


moving example line in swagger doc back to /health path
